# mcp-example

./: .coveragerc  .gitignore  CHANGELOG.md  CLAUDE.md  KORE_AI_INTEGRATION.md  README.md  auth.py  my_client.py  my_server.py  pyproject.toml  pytest.ini  test_my_client.py  test_my_server.py
