[project]
name = "mcp-examples"
version = "0.1.0"
description = "Production-ready MCP server and client with SQLite-backed API key authentication"
readme = "README.md"
authors = [
    {name = "David Gwartney", email = "david.gwartney@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.14.5",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]
